--- a/client/src/Components/style.css
+++ b/client/src/Components/style.css
@@ -102,3 +102,19 @@ p, div {
     display: flex;
     flex-wrap: wrap;
   }
+  .lookup {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  lookupbutton {
+    min-width: 100%;
+    cursor: pointer;
+    margin-right: 0.25em;
+    margin-top: 0.5em;
+    padding:  0.938em;
+    border: none;
+    border-radius: 4px;
+    background-color: rgb(199, 63, 63);
+    color: #fefefe;
+  }
