icons homes page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,3 +37,8 @@
     transform: rotate(360deg);
   }
 }
+.Viewpages {
+  font-family: Russo One;
+  background-color: #d0caee;
+  color: #a8c553;
+}
